[package]
name = "near-indexer-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "5.0.0"
near-jsonrpc-client = "0.8.0"
near-primitives = "0.20.1"
anyhow = { version = "1.0.79", features = ["backtrace"] }
tokio = { version = "1.35.1", features = ["full"] }
near-jsonrpc-primitives = "0.20.1"
