[package]
name = "near-indexer-rpc"
version = "0.1.1"
edition = "2021"
authors = ["Rooct welling1234@gmail.com"]
description = "A Rust library for interacting with the NEAR Indexer and RPC."
license = "MIT"
repository = "https://github.com/rooct/near-indexer-rpc.git"
homepage = "https://github.com/rooct/near-indexer-rpc.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "5.0.0"
near-jsonrpc-client = "0.8.0"
near-primitives = "0.20.1"
anyhow = { version = "1.0.79", features = ["backtrace"] }
tokio = { version = "1.35.1", features = ["full"] }
near-jsonrpc-primitives = "0.20.1"

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = 'abort'
